k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-k8s-service
  namespace: lab-k8s
spec:
  selector:
    app: app-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
