k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-k8s-ingress
  namespace: lab-k8s
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:335180047327:certificate/172b82f8-93a4-484d-b41a-23c1f35dc85b
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: gsreis-lab.daredemsp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-k8s-service
                port:
                  number: 80
